# mailpalace

./: .gitignore  README.md  SETUP.md
backend/: pyproject.toml
backend/src/mailpalace/: __init__.py  __main__.py  config.py  logging.py
backend/src/mailpalace/auth/: __init__.py  gmail_oauth.py  secrets.py
backend/src/mailpalace/db/: engine.py  migrate.py  repo.py  schema.py  seed.py
backend/src/mailpalace/llm/: __init__.py  base.py  ollama.py  prompts.py  router.py
backend/src/mailpalace/mail/: __init__.py  _retry.py  _rfc822.py  base.py  gmail.py  imap.py  imap_folders.py
backend/src/mailpalace/pipeline/: __init__.py  draft.py  ingest.py  language.py  triage.py
backend/src/mailpalace/web/: __init__.py  app.py  deps.py  server.py
backend/src/mailpalace/web/routes/: __init__.py  accounts.py  draft.py  email.py  email_actions.py  events.py  inbox.py  settings.py  threads.py
backend/tests/: conftest.py  test_inbox_route.py  test_llm_ollama.py  test_router.py  test_triage_parser.py
docs/: ARCHITECTURE.md  DESIGN.md  MANUAL_TEST_PLAN.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/components/: AutoReload.tsx  ConnectInbox.tsx  StatusBar.tsx
frontend/components/email/: AiMetaSidebar.tsx  ClassificationBadge.tsx  EmailListItem.tsx  FilterBar.tsx  ImapConnectForm.tsx  LanguageFlag.tsx  NewsletterDigest.tsx  Sidebar.tsx  (+3 more)
frontend/lib/: api.ts  imap-presets.ts  mock-data.ts  types.ts  utils.ts
scripts/: smoke.py
(+3 files in other folders)
