[project]
name = "mailpalace"
version = "0.1.0"
description = "Local-first email AI agent — triages your inbox with Ollama by default, optional Anthropic/OpenAI"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "structlog>=24.1",
    "apscheduler>=3.10",
    "py3langid>=0.2.2",
    "keyring>=25.0",
    "cryptography>=42.0",
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
]

[project.optional-dependencies]
remote-llm = [
    "anthropic>=0.34",
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
mailpalace = "mailpalace.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
